# stranger-strings-rs

./: Cargo.toml  README.md
examples/: debug_scores.rs
src/: constants.rs  encoding.rs  error.rs  lib.rs  main.rs
src/language/: arabic.rs  chinese.rs  cyrillic.rs  mod.rs  script_detection.rs
src/model/: mod.rs  model_parser.rs  trigram_model.rs
src/processing/: mod.rs  string_processor.rs  string_scorer.rs
src/scoring/: arabic.rs  chinese.rs  cyrillic.rs  mod.rs  trigram.rs
tests/: compatibility_tests.rs  integration_tests.rs  language_scoring_tests.rs
