[package]
name = "stranger-strings-rs"
version = "0.1.0"
edition = "2021"
description = "Extract human-readable strings from binary files using trigram-based scoring"
license = "Apache-2.0"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your-username/stranger-strings-rs"

[[bin]]
name = "stranger-strings"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
